<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_it_works"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/bakso_sapi"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/thanks"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:fontFamily="@font/bakso_sapi"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bakso_sapi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>