<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FAE7BD"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colorvision"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/bakso_sapi"
        android:textColor="@color/colorAccent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/hello"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/get_started"
        android:textSize="20sp"
        android:fontFamily="@font/bakso_sapi"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnHow"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:fontFamily="@font/bakso_sapi"
        android:text="@string/how_it_works"
        android:textSize="20sp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>