<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select one:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/bakso_sapi"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/upload_an_image"
        android:textSize="20sp"
        android:fontFamily="@font/bakso_sapi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnTake"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/take_your_own_picture"
        android:textSize="20sp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:fontFamily="@font/bakso_sapi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:fontFamily="@font/bakso_sapi"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTake"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>