<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:fontFamily="@font/bakso_sapi"
        android:layout_height="wrap_content"
        android:text="@string/upload_an_image_and_drag_your_finger_over_it_to_determine_the_colors"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:src="@drawable/hi"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/upload"
        android:textSize="20sp"
        android:fontFamily="@font/bakso_sapi"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/color"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:fontFamily="@font/bakso_sapi"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btnUpload"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>